# CriaturasPOO

./: Acuatica.cpp  Acuatica.h  Albo.cpp  Albo.h  Bestia.cpp  Bestia.h  BuhoMagico.cpp  BuhoMagico.h  CMakeLists.txt  Centella.cpp  Centella.h  Conejo.cpp  Conejo.h  Criatura.cpp  Criatura.h  Dragon.cpp  Dragon.h  Hipogrifo.cpp  Hipogrifo.h  LentoDeRaiz.cpp  LentoDeRaiz.h  Magica.cpp  Magica.h  Magico.cpp  Magico.h  Mapa.cpp  Mapa.h  Metamorfita.cpp  Metamorfita.h  Nodo.cpp  Nodo.h  README.md  Sirena.cpp  Sirena.h  Volador.cpp  Volador.h  Zorro.cpp  Zorro.h  main.cpp  uml.md
